Issue #6364: Set whitespace to normal for CKE5 and long descriptions

--- a/core/modules/system/css/system.theme.css
+++ b/core/modules/system/css/system.theme.css
@@ -94,6 +94,10 @@ tr.even .form-item {
   margin-bottom: 0;
   white-space: nowrap;
 }
+.field-multiple-table tr.odd .form-item,
+.field-multiple-table tr.even .form-item {
+  white-space: normal;
+}
 .form-item .description {
   font-size: 0.85em;
 }
